added auto_relations setting both as global option and strategy config option

--- a/README.textile
+++ b/README.textile
@@ -533,6 +533,7 @@ The following is a list of the global Troles common configuration options:
 * default_orm
 * auto_load (true|false)
 * log_on (true|false)
+* auto_relations (true|false)
 
 Examples:
 
@@ -547,6 +548,12 @@ Ensures the adapter is autoloaded from the troles internal _/adapter_ folder. Le
 @Troles::Common::Config.log_on = true@
 
 Turns on some logging to make it easier to debug what goes on behind the curtain (note: to be improved...). 
+
+@Troles::Common::Config.auto_relations = false@
+
+Disables troles auto configuration of model relationships (has_many, belongs_to and such), allowing you full control. 
+
+Note: For all the global on/off options you can opt to use same option on an individual strategy basis as part of an individual strategy configuration.
 
 h2. Other notes on Application-User control
 
