trolegroups added and specs pass :)

--- a/README.textile
+++ b/README.textile
@@ -235,17 +235,17 @@ A custom Config class for _:single_ role strategies using _Mongoid_ could look s
 module Trole::Mongoid
   class Config < Troles::Common::Config  
 
-    def initialize clazz, options = {}
+    def initialize subject_class, options = {}
       super
     end
   
     def configure_relation
       case strategy
       when :ref_one
-        has_one_for clazz, :role
-        belongs_to_for role_model, :user
+        has_one_for subject_class, object_model
+        belongs_to_for object_model, subject_class
       when :embed_one
-        embeds_one_for clazz, :role
+        embeds_one_for subject_class, object_model
       end
     end
     
@@ -256,7 +256,7 @@ module Trole::Mongoid
       when :string_one
         String
       end
-      clazz.send(:field, role_field, type) if type      
+      subject_class.send(:field, role_field, type) if type      
     end
 </pre>                     
 
@@ -269,7 +269,7 @@ Example: Config class for :many roles strategies with _Mongoid_
 module Troles::Mongoid
   class Config < Troles::Common::Config  
 
-    def initialize clazz, options = {}
+    def initialize subject_class, options = {}
       super
     end
   
@@ -286,7 +286,7 @@ module Troles::Mongoid
       when :string_many
         String
       end
-      clazz.send(:field, role_field, type: => type) if type      
+      subject_class.send(:field, role_field, type: => type) if type      
     end
 </pre>
 
